crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_space.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f\t= 1"
---
nash::syntax

  × Tabs are not allowed.
   ╭─[src/Main.nash:1:2]
 1 │ f   = 1
   ·  ───
   ╰────
  help: Replace the tab with spaces.
