crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_start.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
UNEXPECTED SYMBOL

  × I am getting stuck because this line starts with the = symbol:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: When a line has no spaces at the beginning, I expect it to be a declaration. If
        this is not supposed to be a declaration, try adding some spaces before it?

        Here is a valid definition (with a type annotation) for reference:

            greet : string -> string
            greet name =
              "Hello " ++ name ++ "!"

        The top line (called a "type annotation") is optional. You can leave it off if
        you want. As you get more comfortable with Nash and as your project grows, it
        becomes more and more valuable to add them though! They work great as
        compiler-verified documentation, and they often improve error messages!
