crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_trait.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
MISSING TRAIT NAME

  × I was parsing a trait declaration, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting a capitalized trait name, such as Eq or Show.
