crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_type.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax

  × Expected a type name.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Use lowercase for a little type or uppercase for a Big type.
