crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_type_alias.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
EXPECTING TYPE ALIAS NAME

  × I am partway through parsing a type alias, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting a name like account or point next. Nash uses lower-case names
        for little aliases and capitalized names for Big aliases.

        Note: Here is an example of a valid `type alias` for reference:

            type alias Account = { owner : Bytes, balance : Int }

        This would let us use `Account` as a shorthand for that record type. Using this
        shorthand makes type annotations much easier to read, and makes changing code
        easier if you decide later that there is more to an account than owner and
        balance!
