crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_decl_type_space.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Tabs are not allowed.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Replace the tab with spaces.
