crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_excessive_nesting.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: f = (((1)))
---
nash::syntax

  × Nesting limit exceeded.
   ╭─[src/Main.nash:1:7]
 1 │ f = (((1)))
   ·       ─
   ╰────
  help: Split this expression, pattern, or type into smaller definitions.
