crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_exposing_indent_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I was partway through parsing exposed values, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting a closing parenthesis. Try adding a ) right here?

        Note: I can get confused when there is not enough indentation, so if you already
        have a closing parenthesis, it probably just needs some spaces in front of it.
