crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_exposing_indent_value.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
UNFINISHED EXPOSING

  × I was partway through parsing exposed values, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting another value to expose.
